# hiplambda

./: .ghci  .gitignore  .travis.yml  Imports.hs  LICENSE  README.md  app.json  cabal.config  default.nix  generate-service-descriptor.hs  hipbot.nix  hiplambda.cabal  hiplambda.nix  pg.sql  rds.diff
.halcyon/: constraints  extra-data-files  pre-install-hook  sandbox-extra-apps  sandbox-post-build-hook  sandbox-sources
.halcyon/hoogle-index-0.4.2/: sandbox-extra-apps
.halcyon/hoogle-index-0.4.2/sandbox-extra-apps-constraints/: happy-1.19.5.constraints
.halcyon/sandbox-extra-apps-constraints/: happy-1.19.5  hoogle-index-0.4.2
.halcyon/sandbox-post-build/: mueval
deploy/: docker.nix  hipbot.nix  hoogle-local-wrapper.sh  hoogle.nix  infrastructure-ec2.nix  infrastructure-vbox.nix  mueval-nix.patch  mueval.nix  network.nix  packages.nix  webcrank-wai.nix  webcrank.nix
src/HipBot/: HipLambda.hs
src/HipBot/HipLambda/: Descriptor.hs  Eval.hs  Healthcheck.hs  Hoogle.hs  Pointfree.hs  Type.hs
